Update NameLayer to use Dialogs